--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,34 +1,40 @@
-server {
-    listen 8080;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        proxy_pass http://service1:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+http {
+    server {
+        listen 8080;  # Ensure Nginx listens on port 8080
 
-    location /service2 {
-        proxy_pass http://service2:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        error_page 502 = /maintenance.html;
-    }
+        location / {
+            proxy_pass http://service1:8080;  # Forward requests to service1
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-    location /service3 {
-        proxy_pass http://service3:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        error_page 502 = /maintenance.html;
-    }
+        location /service2 {
+            proxy_pass http://service2:8080;  # Forward requests to service2
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            error_page 502 = /maintenance.html;
+        }
 
-    location /maintenance.html {
-        root /usr/share/nginx/html;
-        internal;
+        location /service3 {
+            proxy_pass http://service3:8080;  # Forward requests to service3
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            error_page 502 = /maintenance.html;
+        }
+
+        location /maintenance.html {
+            root /usr/share/nginx/html;  # Serve the maintenance page
+            internal;
+        }
     }
 }
